2003-11-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dim-vector.h (dim_vector::all_ones): New function.

2003-11-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* idx-vector.h (idx_vector::orig_empty): Check orig_dims for
	zeros, not orig_rows or orig_columns.
	(idx_vector::idx_vector_rep::orig_rows): Define using orig_dims.
	(idx_vector::idx_vector_rep::orig_columns): Likewise.

	* idx-vector.cc (idx_vector::idx_vector_rep::orig_nr,
	(idx_vector::idx_vector_rep::orig_nc): Delete.

	* idx-vector.cc (idx_vector::idx_vector_rep):
	Use initialization lists for constructors.

	* Array.cc (Array<T>::indexN): Correctly handle single colon index.
	Omit special case for ra_idx.capacity () == 1.
	Always allow single index for matrix args with optional warning.

	* idx-vector.h, idx-vector.cc: Convert boolMatrix functions to use
	boolNDArray.  Likewise, convert Matrix functions to use	NDArray.

	* Array-so.cc: New file.  Move instantiations here from so-array.h.
	* Makefile.in (TI_SRC): Add it to the list.

	* MArray-defs.h (DO_VS_OP2, DO_VV_OP2): Accept args for element
	type and the names of the left and right operands.  Change all uses.

	* so-array.cc, so-array.h: New files.  Move streamoff_array here
	from src/ov-streamoff.h and src/ov-streamoff.cc.

2003-11-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* MArrayN.cc (operator -=, operator +=): Check dimensions, not
	just length.

	* Array2.h, Array3.h, DiagArray2.h, DiagArray2.cc, MDiagArray2.h,
	ArrayN.h:  Add this-> or Base:: qualifiers for references to
	non-dependent member functions and data as needed.

	* DiagArray2.h, DiagArray2.cc: Delete unused code.

	* Array2.h (Array2<T>::operator =): Don't copy dimensions here.
	* Array3.h (Array3<T>::operator =): Likewise.
	* DiagArray2.h (DiagArray2<T>::operator =): Likewise.
	Include Array.h, not Array2.h.

2003-11-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* str-vec.cc (list_in_columns): Fix previous change.

	* dim-vector.h (dim_vector::num_ones): New function.