@@ -2546,11 +2546,47 @@ assignN (Array<LT>& lhs, const Array<RT>& rhs, const LT& rfv)
 	  ("number of indices is zero");
       else if (n_idx == 1)
 	{
-	  Array<int> one_arg_temp (1, 0);
+	  idx_vector iidx = idx(0);
 
-	  RT scalar = rhs.elem (one_arg_temp);
+	  if (liboctave_wfi_flag
+	      && ! (iidx.is_colon ()
+		    || (iidx.one_zero_only ()
+			&& iidx.orig_dimensions () == lhs.dims ())))
+	    (*current_liboctave_warning_handler)
+	      ("single index used for n-d array");
 
-	  lhs.fill (scalar);
+	  int lhs_len = lhs.length ();
+
+	  int len = iidx.freeze (lhs_len, "n-d arrray");
+
+	  if (iidx)
+	    {
+	      if (len == 0)
+		{
+		  if (! (rhs_dims.all_ones () || rhs_dims.all_zero ()))
+		    (*current_liboctave_error_handler)
+		      ("A([]) = X: X must be an empty matrix or scalar");
+		}
+	      else if (len <= lhs_len)
+		{
+		  RT scalar = rhs.elem (0);
+
+		  for (int i = 0; i < len; i++)
+		    {
+		      int ii = iidx.elem (i);
+
+		      lhs.elem (ii) = scalar;
+		    }
+		}
+	      else
+		{
+		  (*current_liboctave_error_handler)
+      ("A(I) = X: X must be a scalar or a matrix with the same size as I");
+
+		  retval = 0;
+		}
+	    }
+	  // idx_vector::freeze() printed an error message for us.
 	}
       else if (n_idx < lhs_dims.length ())
 	{
@@ -2755,7 +2791,7 @@ assignN (Array<LT>& lhs, const Array<RT>& rhs, const LT& rfv)
 
 	      if (index_in_bounds (elt_idx, lhs_inc))
 		{
-		  int s = compute_index (result_rhs_idx,rhs_dims);
+		  int s = compute_index (result_rhs_idx, rhs_dims);
 
 		  lhs.checkelem (elt_idx) = rhs.elem (s);
 
